# poe2openai

./: Cargo.toml  Dockerfile  README.md  compose.yml
src/: main.rs  poe_client.rs  types.rs  utils.rs
src/handlers/: admin.rs  chat.rs  cors.rs  mod.rs  models.rs
static/: fontawesome.css
templates/: admin.html
