[package]
name = "poe2openai"
version = "0.2.2"
edition = "2021"
publish = ["crates-io"]
authors = ["Jerome Leong <jeromeleong1998@gmail.com>"]
description = "Poe API to OpenAI API"
repository = "https://github.com/jeromeleong/poe2openai"
license = "MIT"
keywords = ["poeapi", "openai","ai"]

[dependencies]
poe_api_process = "0.1.5"
tokio = { version = "1.43.0", features = ["full"] }
futures-util = "0.3.31"
salvo = { version = "0.76.2", features = ["basic-auth","size-limiter","serve-static"] }
serde = "1.0.218"
serde_json = "1.0.139"
chrono = "0.4.39"
nanoid = "0.4.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
askama = "0.12.1"
serde_yaml = "0.9.34"
